<resources>
    <string name="app_name">YCBbGjdwNew</string>
    <string name="dakailanya" translatable="false">打开蓝牙</string>
    <string name="guanbilanya" translatable="false">关闭蓝牙</string>
    <string name="duankailianjie" translatable="false">断开连接</string>
    <string name="sousuolanya" translatable="false">搜索蓝牙</string>
    <string name="zhongying" translatable="false">中/英</string>
    <string name="tingzhisousuo" translatable="false">停止搜索</string>
    <string name="qingkaiqilanya" translatable="false">请开启蓝牙</string>
    <string name="weilianjie" translatable="false">未连接</string>
    <string name="yilianjie" translatable="false">已连接</string>
    <string name="lianjiezhong" translatable="false">连接中...</string>

    <string name="lanyayikaiqi" translatable="false">蓝牙已开启</string>
    <string name="lanyadakaishibai" translatable="false">蓝牙打开失败</string>

    <string name="lianjieshibai" translatable="false">连接失败</string>
    <!--<string name="duankailianjie" translatable="false">断开连接</string>-->
    <string name="lianjiezhongduan" translatable="false">连接中断</string>
    <string name="lianjielanya" translatable="false">连接蓝牙</string>
    <!--**************************************国网**************************************************-->
    <string name="qingqiulianjie" translatable="false">请求连接/请求连接确认</string>
    <string name="huoqulishishuju" translatable="false">获取历史试验数据/返回历史试验数据</string>
    <string name="huoqudangqianshuju" translatable="false">获取当前试验数据/返回当前试验数据</string>
    <string name="jieshoushujuqueren" translatable="false">接收数据确认</string>
    <string name="xiafashiyan" translatable="false">下发试验基础信息/返回试验基础信息</string>
    <string name="kongxian" translatable="false">空闲</string>
    <string name="fanmang" translatable="false">繁忙</string>
    <string name="qingshurulsxuhao" translatable="false">请输入历史数据序号:</string>
    <string name="chaxun" translatable="false">查询</string>
    <string name="fanhui" translatable="false">返回</string>
    <string name="fenjie" translatable="false">分接</string>
    <string name="bianbizhi" translatable="false">变比值</string>
    <string name="wucha" translatable="false">误差</string>
    <string name="yiqizhuangtai" translatable="false">仪器状态:</string>
    <string name="weihuoqu" translatable="false">未获取</string>
    <string name="qingshurulsxuhao2" translatable="false">请输入历史数据序号</string>
    <string name="lishishujuxuhaozuixiaoweiyi" translatable="false">历史数据序号最小为1</string>
    <string name="abwucha" translatable="false">AB误差</string>
    <string name="abshicebianbi" translatable="false">AB实测变比</string>
    <string name="abbiaochengbianbi" translatable="false">AB标称变比</string>
    <string name="bcwucha" translatable="false">BC误差</string>
    <string name="bcshicebianbi" translatable="false">BC实测变比</string>
    <string name="bcbiaochengbianbi" translatable="false">BC标称变比</string>
    <string name="cawucha" translatable="false">CA误差</string>
    <string name="cashicebianbi" translatable="false">CA实测变比</string>
    <string name="cabiaochengbianbi" translatable="false">CA标称变比</string>
    <string name="biaochengbianbi" translatable="false">标称变比</string>
    <string name="shicebianbi" translatable="false">实测变比</string>
    <string name="shicebianbiabc" translatable="false">实测变比AB/BC/CA</string>
    <string name="wuchaabc" translatable="false">误差AB/BC/CA</string>
    <string name="ceshishijian" translatable="false">测试时间:</string>
    <string name="wucijilu" translatable="false">无此记录</string>
    <!--****************************试验基础信息**********************************-->
    <string name="zhandianname" translatable="false">站点名称:</string>
    <string name="zhandianbianma" translatable="false">站点编码:</string>
    <string name="shebeiname" translatable="false">设备名称:</string>
    <string name="shebeibianma" translatable="false">设备编码:</string>
    <string name="shiyanmubanname" translatable="false">试验模板名称:</string>
    <string name="shiyanmubanbianhao" translatable="false">试验模板编号:</string>
    <string name="shiyanxiangmuname" translatable="false">试验项目名称:</string>
    <string name="shiyanxiangmubianma" translatable="false">试验项目编码:</string>
    <string name="shiyanrenyuan" translatable="false">试验人员:</string>
    <string name="tianqi" translatable="false">天气:</string>
    <string name="xiafashiyanjcxx" translatable="false">下发试验基础信息</string>
    <string name="tqqing" translatable="false">晴</string>
    <string name="tqyin" translatable="false">阴</string>
    <string name="tqyu" translatable="false">雨</string>
    <string name="tqxue" translatable="false">雪</string>
    <string name="tqwu" translatable="false">雾</string>
    <string name="tqleiyu" translatable="false">雷雨</string>
    <string name="tqduoyun" translatable="false">多云</string>
    <string name="shiyanyiqileixing" translatable="false">试验仪器类型：</string>
    <string name="yiqichangjia" translatable="false">仪器厂家：</string>
    <string name="yiqixinghao" translatable="false">仪器型号：</string>
    <string name="yiqichuchangbianhao" translatable="false">仪器出厂编号：</string>
    <string name="guifanbanbenhao" translatable="false">规范版本号：</string>
    <string name="wendu" translatable="false">温度：</string>
    <string name="shidu" translatable="false">湿度：</string>
    <string name="jingdu" translatable="false">经度：</string>
    <string name="weidu" translatable="false">纬度：</string>
    <string name="haiba" translatable="false">海拔：</string>
    <!--***********************************仪器类型*******************************************-->
    <string name="zhiliudianzucsy" translatable="false">直流电阻测试仪</string>
    <string name="dianyabicsy" translatable="false">电压比测试仪</string>
    <string name="bileiqizuxingdianliucsy" translatable="false">避雷器阻性电流测试仪</string>
    <string name="youzaifenjiekaiguancsy" translatable="false">有载分接开关测试仪</string>
    <string name="jiesuncsy" translatable="false">介损测试仪</string>
    <string name="huiludianzucsy" translatable="false">回路电阻测试仪</string>
    <string name="gaoyakaiguanjixietexingcsy" translatable="false">高压开关机械特性测试仪</string>
    <string name="raozubianxingzonghecsy" translatable="false">绕组变形综合测试仪--频率响应测试+阻抗测试</string>
    <string name="raozubianxingcsypinlvxiangying" translatable="false">绕组变形测试仪（频率响应测试）</string>
    <string name="raozubianxingcsyzukangceshi" translatable="false">绕组变形测试仪（阻抗测试）</string>
    <string name="dianliuhuganqitexingcsy" translatable="false">电流互感器特性测试仪</string>
    <string name="dianyahuganqilicitexingcsy" translatable="false">电压互感器励磁特性测试仪</string>
    <string name="xiangduijiesunjidianrongcsy" translatable="false">相对介损及电容测试仪</string>
    <string name="jiedidaotongdianzucsy" translatable="false">接地导通电阻测试仪</string>
    <string name="diwangdianzujcy" translatable="false">地网电阻测试仪</string>
    <string name="sf6zonghejcy" translatable="false">SF6综合检测仪</string>
    <string name="sf6weishuijcy" translatable="false">SF6微水检测仪</string>
    <string name="sf6chundujcy" translatable="false">SF6纯度检测仪</string>
    <string name="sf6fenjiechanwujcy" translatable="false">SF6分解产物检测仪</string>
    <string name="sf6weishuichundujcy" translatable="false">SF6微水纯度检测仪</string>
    <string name="sf6weishuifenjiechanwujcy" translatable="false">SF6微水分解产物检测仪</string>
    <string name="sf6chundufenjiechanwujcy" translatable="false">SF6纯度分解产物检测仪</string>
    <string name="jueyuandianzucsy" translatable="false">绝缘电阻测试仪</string>
    <string name="zhiliugaoyafashengqi" translatable="false">直流高压发生器</string>
    <string name="maichongdianliufajufangyi" translatable="false">脉冲电流法局放仪</string>
    <string name="dianlanzhendangbocsy" translatable="false">电缆振荡波测试仪</string>
    <string name="youzhongrongjieqitijcy" translatable="false">油中溶解气体检测仪</string>
</resources>