<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bacg"
    android:paddingTop="10dp"
    tools:context=".activity.GetLishiShujuActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bacg"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/textSize_22_b"
                android:gravity="center"
                android:text="@string/fenjie"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:theme="@style/textSize_26_b"
                android:gravity="center"
                android:text="@string/shicebianbi"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/biaochengbianbi"
                android:theme="@style/textSize_22_b" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:theme="@style/textSize_22_b"
                android:gravity="center"
                android:text="@string/wucha"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bacg"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/current_time_text"/>
        </LinearLayout>
        <ListView
            android:id="@+id/lvGetLishiShuju2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:scrollbars="none">
        </ListView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/current_time_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_20_b"
            android:text="@string/qingshurulsxuhao"/>
        <EditText
            android:id="@+id/etGetLishiShuju2Xuhao"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/bac_bai_yinying_hei_zhijiao"
            android:theme="@style/textSize_20_b"
            android:inputType="number"
            android:singleLine="true"
            android:layout_marginLeft="5dp"
            android:maxEms="5"
            android:text=""/>
        <LinearLayout
            android:id="@+id/llGetLishiShuju2Chaxun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:background="@drawable/yinying_dianji_jiantou"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/textSize_20_b"
                android:text="@string/chaxun"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/textSize_18_b"
                android:padding="5dp"
                android:gravity="center_vertical|right"
                android:text="@string/ceshishijian"/>
            <TextView
                android:id="@+id/tvGetLishiShuju2CsTime"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:theme="@style/textSize_18_b"
                android:gravity="center_vertical"
                android:text=""/>
            <TextView
                android:id="@+id/tvGetLishiShuju2Fanhui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/textSize_20_b"
                android:padding="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/yinying_dianji_jiantou"
                android:text="@string/fanhui"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>