<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bacg"
    tools:context=".activity.GetDataAndUpLoadActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_26_b"
            android:text="@string/yiqizhuangtai"/>
        <TextView
            android:id="@+id/tvGetDataUPYqType"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:theme="@style/textSize_26"
            android:textColor="@color/textColor_red"
            android:text="@string/weihuoqu"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/llQingqiulianjie"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/yuanjiao_bac_lv_biankuang_lv"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/textSize_30_b"
                android:gravity="center"
                android:text="@string/qingqiulianjie"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llXiafaShiyanJichuxinxi"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="30dp"
            android:background="@drawable/yuanjiao_bac_lv_biankuang_lv"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/textSize_30_b"
                android:gravity="center"
                android:text="@string/xiafashiyan"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/llHuoqulishishuju"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="50dp"
            android:padding="30dp"
            android:background="@drawable/yuanjiao_bac_lv_biankuang_lv"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/textSize_30_b"
                android:gravity="center"
                android:text="@string/huoqulishishuju"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llHuoqudangqianshuju"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="30dp"
            android:background="@drawable/yuanjiao_bac_lv_biankuang_lv"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/textSize_30_b"
                android:gravity="center"
                android:text="@string/huoqudangqianshuju"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>